examples/invalid/yir/cpu_glm_missing_lifetime_invalid.yir
yir 0.1

resource cpu0 cpu.arm64

cpu.null nil cpu0
cpu.const v1 cpu0 10
cpu.alloc_node head_raw cpu0 v1 nil
cpu.move_ptr head cpu0 head_raw

edge dep v1 head_raw
edge dep nil head_raw
edge dep head_raw head
